@@ -6,6 +6,9 @@
   * add example to study the resize() function
   * improve some error messages
   * add more tests
+  * raise `NotImplementedError` with (useful message) when trying to call
+    the `.fromstring()` or `.tostring()` methods, which have been removed
+    in the last release
 
 
 2020-07-06   1.3.0:
